--- a/NASciML/main.tex
+++ b/NASciML/main.tex
@@ -20,7 +20,7 @@
 
 \end{frame}
 
-\begin{frame}[Brief overview]
+\begin{frame}{Brief overview}
 	Scientific machine learning is applied to a broad range of computational problems, including
 	\begin{itemize}
 		\item 1. Steady-state simulations \& inverse problems
