SIAM student present

--- a/Scientific ML/main.tex
+++ b/Scientific ML/main.tex
@@ -489,7 +489,7 @@ And we use a \textbf{neural network} with $2$ hidden layer to parameterize the m
 		\wht \mfR(\mfu) & = \phi_{NN}(u, v).
 	\end{aligned}\right.
 \eequ
-	It is akin to the main idea of multigrid. Inner loop now represents the role of accounting for the residue of switching between two grid size.
+	It is akin to the main idea of multigrid. Inner-loop now represents the role of accounting for the residue of switching between two grid size.
 \end{frame}
 
 
@@ -505,7 +505,7 @@ And we use a \textbf{neural network} with $2$ hidden layer to parameterize the m
 
 
 \begin{frame}{Simulation}
-	On average in $200$ experiments, the regularized simulator improve by 40\%.
+	On average in $200$ experiments, the regularized simulator improves by 40\%.
 	\begin{figure}[H]
           \centering
           \centerline{\includegraphics[width=0.4\linewidth]{fig/RD2-64-bm.jpg}}
@@ -515,7 +515,7 @@ And we use a \textbf{neural network} with $2$ hidden layer to parameterize the m
 \end{frame}
 
 
-\begin{frame}{Incompressible Navier-Stockes equation}
+\begin{frame}{Incompressible Navier-Stokes equation}
 	Consider incompressible NS equation:
 	\begin{equation}\label{FN}
     \begin{aligned}
