organize after last conference

--- a/paper slide/Mitigating_DS_MLHS/main.tex
+++ b/paper slide/Mitigating_DS_MLHS/main.tex
@@ -1,4 +1,4 @@
-\documentclass[NUS-Kajima workshop]{beamer}
+\documentclass[paper slide]{beamer}
 \usetheme{Boadilla}
 \usepackage{essay-def}
 \usepackage{bm}
